// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mermaid-engine > has no hard defects and records its soft metrics 1`] = `
{
  "bends": 6,
  "crossings": 0,
}
`;

exports[`mermaid-engine > three packages: no hard defects, every connector straight or one bend 1`] = `
{
  "bends": 2,
  "crossings": 0,
}
`;
